force-app/main/default/objects/Trigger_Actions_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si una accion esta habilitada para su ejecucion</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>