force-app/main/default/objects/Trigger_Actions_Config__mdt/fields/Trigger_Action__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Action__c</fullName>
    <description>Accion o tarea que se desea habilitar o deshabilitar</description>
    <label>Trigger Action</label>
    <length>50</length>
    <type>Text</type>
</CustomField>