force-app/main/default/objects/Trigger_Actions_Config__mdt/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <description>Nombre del trigger/desencadenador</description>
    <label>Trigger Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>